// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayBadge should render a \`danger color\` badge 1`] = `
<span class="badge badge-danger">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`default color\` badge 1`] = `
<span class="badge badge-primary">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`info color\` badge 1`] = `
<span class="badge badge-info">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`primary color\` badge 1`] = `
<span class="badge badge-primary">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`secondary color\` badge 1`] = `
<span class="badge badge-secondary">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`success color\` badge 1`] = `
<span class="badge badge-success">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a \`warning color\` badge 1`] = `
<span class="badge badge-warning">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a badge with classes 1`] = `
<span class="badge badge-primary my-custom-class">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a badge with id 1`] = `
<span class="badge badge-primary" id="myId">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;

exports[`ClayBadge should render a badge with label 1`] = `
<span class="badge badge-primary">
  <span class="badge-item badge-item-expand">Bar</span>
</span>
`;

exports[`ClayBadge should render the default markup 1`] = `
<span class="badge badge-primary">
  <span class="badge-item badge-item-expand">Foo</span>
</span>
`;
